# slackcli

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
claude-code-plugin/.claude-plugin/: plugin.json
coding-agent-plugins/claude-code/.claude-plugin/: plugin.json
coding-agent-plugins/claude-code/skills/slackcli/: SKILL.md
docs/: creating-slack-api-app.md  python-slack-sdk.md  slack-api-overview.md  slack-message-formats.md  slack-unread-messages-api-limitations.md
src/slackcli/: __init__.py  blocks.py  cache.py  cli.py  client.py  config.py  context.py  errors.py  logging.py  models.py  output.py  retry.py  time_utils.py  users.py
src/slackcli/commands/: __init__.py  conversations.py  convos.py  delete.py  dm.py  download.py  edit.py  files.py  messages.py  pins.py  react.py  reactions.py  resolve.py  schedule.py  scheduled.py  search.py  send.py  unread.py  users.py
tests/: __init__.py  test_blocks.py  test_models.py  test_resolve.py  test_time_utils.py
