[project]
name = "slackcli"
version = "0.1.0"
description = "A command-line interface for Slack"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=14.3.2",
    "slack-sdk>=3.39.0",
    "tomli>=2.4.0",
    "typer>=0.21.1",
]

[project.scripts]
slack = "slackcli.cli:cli"

[tool.uv]
package = true

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slackcli"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
